3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Add support for periodic updating of hiscore information for players - fixes
bug 1735262.  Main change was to modify check_score() to take a flag that
determines if messages related to high score placement should be displayed
or not.
--
include/sproto.h: Rebuilt because of change to check_score()
server/apply.c: Change calls to check_score() to take quiet flag.
server/c_wiz.c: Change calls to check_score() to take quiet flag.
server/hiscore.c: Modify check_score to take quiet flag, update function
  not to print messages if it is set.
server/login.c: Change calls to check_score() to take quiet flag, remove
  some meaningless code at end of emergency_save()
server/player.c: Change calls to check_score() to take quiet flag.
server/server.c: Add calls to check_score() when doing autosaves as well
  as when player connection is unexpected terminated.
--
MSW 2007-09-25

Always destroy projectiles having no_drop when they stop being a
projectile. This prevents arrows and weapons fired from summoned monsters
to stick to the ground/into the victim's inventory.
--
common/objects.c: Remove static modifier from free_object2().
server/attack.c: In hit_with_arrow() destroy no_drop arrows.
server/time.c: In stop_item() and fix_stopped_arrow() destroy no_drop
 projectiles. Add new function free_no_drop() to check for and destroy
 objects having no_drop.
Andreas Kirschbaum 2007-09-20

Fix bug 1763098 - wrong key placement in random maps.  The key placement breaks
if there is a normal door next to the locked door, so modify code to remove
normal doors next to locked doors.  On broken test map, this change results