@@ -338,6 +338,11 @@ static void set_body_info(object *op, char *params) {
 static void check_loaded_object(object *op) {
     int ip;
 
+    if (artifact_init)
+        /* Artifacts are special beasts, let's not check them. */
+        return;
+
+
     /* We do some specialized handling to handle legacy cases of name_pl.
      * If the object doesn't have a name_pl, we just use the object name -
      * this isn't perfect (things won't be properly pluralized), but works to
